{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 909,
  "lineage": "2d39dd8e-1ddd-59b4-ab47-9d46d95ca1d9",
  "resources": [
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "create_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:loadbalancer/app/skillup-j-bolon-alb/78b23806a7dc2bbc",
            "arn_suffix": "app/skillup-j-bolon-alb/78b23806a7dc2bbc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "skillup-j-bolon-alb-2081704540.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:loadbalancer/app/skillup-j-bolon-alb/78b23806a7dc2bbc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skillup-j-bolon-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0471555006fabcf4a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d412c4816678e37"
              },
              {
                "subnet_id": "subnet-0e21abfb8023ea5aa"
              }
            ],
            "subnets": [
              "subnet-01d412c4816678e37",
              "subnet-0e21abfb8023ea5aa"
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j-bolon-alb"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j-bolon-alb"
            },
            "vpc_id": "vpc-00b326d95c2865c83",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb_module.aws_security_group.create_albsg",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "create_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:listener/app/skillup-j-bolon-alb/78b23806a7dc2bbc/021beb8ddc09c289",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:targetgroup/skillup-jbolon-tg/770f133aee39d4b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:listener/app/skillup-j-bolon-alb/78b23806a7dc2bbc/021beb8ddc09c289",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:loadbalancer/app/skillup-j-bolon-alb/78b23806a7dc2bbc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_lb.create_alb",
            "module.alb_module.aws_lb_target_group.create_tg",
            "module.alb_module.aws_security_group.create_albsg",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "create_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:targetgroup/skillup-jbolon-tg/770f133aee39d4b4",
            "arn_suffix": "targetgroup/skillup-jbolon-tg/770f133aee39d4b4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 200,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:594123181409:targetgroup/skillup-jbolon-tg/770f133aee39d4b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "skillup-jbolon-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-tg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_albsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:security-group/sg-0471555006fabcf4a",
            "description": "SG for j.bolon alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0471555006fabcf4a",
            "ingress": [],
            "name": "skillup-j.bolon-alb-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-alb-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "112.201.105.205/32"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2372020113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0471555006fabcf4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_security_group.create_albsg",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:security-group/sg-0acf71d1e103ad0db",
            "description": "SG for j.bolon web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acf71d1e103ad0db",
            "ingress": [],
            "name": "skillup-j.bolon-web-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-web-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_web_rule_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2653514833",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0acf71d1e103ad0db",
            "self": false,
            "source_security_group_id": "sg-0471555006fabcf4a",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_security_group.create_albsg",
            "module.asg_module.aws_security_group.create_websg",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_web_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6522,
            "id": "sgrule-1975216548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0acf71d1e103ad0db",
            "self": false,
            "source_security_group_id": "sg-0397d7d26afb152dd",
            "timeouts": null,
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg_module.aws_security_group.create_websg",
            "module.bastion_module.aws_security_group.create_bastionsg",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b18720cb71042df",
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:instance/i-0a89cd053cfbad1a0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skillup-j.bolon-readonly",
            "id": "i-0a89cd053cfbad1a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skillup-j.bolon-pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0635b37d066072b2d",
            "private_dns": "ip-10-100-2-156.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.2.156",
            "public_ip": "18.181.249.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083aac0cd98d07cd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d412c4816678e37",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0397d7d26afb152dd"
            ]
          },
          "dependencies": [
            "module.bastion_module.aws_security_group.create_bastionsg",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_bastionsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:security-group/sg-0397d7d26afb152dd",
            "description": "SG for j.bolon bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0397d7d26afb152dd",
            "ingress": [],
            "name": "skillup-j.bolon-bastion-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "112.201.105.205/32"
            ],
            "description": null,
            "from_port": 6522,
            "id": "sgrule-1810191942",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0397d7d26afb152dd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_module.aws_security_group.create_bastionsg",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "create_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:internet-gateway/igw-0774fb379a12433a7",
            "id": "igw-0774fb379a12433a7",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-igw"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-igw"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "create_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6833a9c92d3cefc",
            "connectivity_type": "public",
            "id": "nat-062d2192d6b832806",
            "network_interface_id": "eni-02bbd2f0e8a2c9030",
            "private_ip": "10.100.1.241",
            "public_ip": "13.113.55.170",
            "subnet_id": "subnet-0e21abfb8023ea5aa",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-nat"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-nat"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_privrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:route-table/rtb-0122f7131fb0059dd",
            "id": "rtb-0122f7131fb0059dd",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062d2192d6b832806",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-privrt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-privrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.create_nat",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:route-table/rtb-0de7f8d437509ee76",
            "id": "rtb-0de7f8d437509ee76",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0774fb379a12433a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pubrt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.create_igw",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f87207d1330f219",
            "route_table_id": "rtb-0122f7131fb0059dd",
            "subnet_id": "subnet-0514b4f3df9a0ac89"
          },
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.create_nat",
            "module.vpc_module.aws_route_table.create_privrt",
            "module.vpc_module.aws_subnet.create_priv_sub",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081a553f3c24030a0",
            "route_table_id": "rtb-0122f7131fb0059dd",
            "subnet_id": "subnet-0d38b28e089920c19"
          },
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.create_nat",
            "module.vpc_module.aws_route_table.create_privrt",
            "module.vpc_module.aws_subnet.create_priv_sub",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086fe04891a5c8277",
            "route_table_id": "rtb-0de7f8d437509ee76",
            "subnet_id": "subnet-0e21abfb8023ea5aa"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.create_igw",
            "module.vpc_module.aws_route_table.create_pubrt",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048a1ac013a96fda1",
            "route_table_id": "rtb-0de7f8d437509ee76",
            "subnet_id": "subnet-01d412c4816678e37"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.create_igw",
            "module.vpc_module.aws_route_table.create_pubrt",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_db_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-0b217e39e35093a6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b217e39e35093a6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-1"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-053f141163b53022d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f141163b53022d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_priv_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-0514b4f3df9a0ac89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0514b4f3df9a0ac89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-1"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-0d38b28e089920c19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d38b28e089920c19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-0e21abfb8023ea5aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e21abfb8023ea5aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-1"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:subnet/subnet-01d412c4816678e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d412c4816678e37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2"
            },
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:vpc/vpc-00b326d95c2865c83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0721b9e34f4c04cc9",
            "default_route_table_id": "rtb-00b273091afdc87fb",
            "default_security_group_id": "sg-018911e7698878576",
            "dhcp_options_id": "dopt-f856479a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b326d95c2865c83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b273091afdc87fb",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-vpc"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "create_s3endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:594123181409:vpc-endpoint/vpce-0c38c72c1796646d8",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.0.0/20",
              "52.219.200.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0c38c72c1796646d8",
            "owner_id": "594123181409",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0122f7131fb0059dd",
              "rtb-0de7f8d437509ee76"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-s3endpoint"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-s3endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00b326d95c2865c83"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.create_igw",
            "module.vpc_module.aws_nat_gateway.create_nat",
            "module.vpc_module.aws_route_table.create_privrt",
            "module.vpc_module.aws_route_table.create_pubrt",
            "module.vpc_module.aws_subnet.create_pub_sub",
            "module.vpc_module.aws_vpc.create_vpc"
          ]
        }
      ]
    }
  ]
}